--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
             body {
                 text-align: center;
                 padding: 1rem;
+                background: url(./damask.jpg);
+                background-size: 50%;
+                font-family:Georgia, 'Times New Roman', Times, serif;
+            }
+            #header {
+                background-color: rgba(0, 0, 0, 0.8);
+                padding: 1rem;
+                color: #FBB03C;
+                border-radius: 10px 10px 0 0;
+                backdrop-filter: blur(10px);
             }
             iframe {
                 width: 100%;
                 height: 100%;
                 border: none;
+                opacity: 0.95;
+                backdrop-filter: blur(10px);
             }
         </style>
     </head>
     <body>
-        <h1>Santa Fe Dance Calendar</h1>
-        <p>A list of dance classes and social dances that I know about. Always click the link to make sure it's actually happening / get more info. <br />Email joseph.carrington@gmail.com to have your events added to the calendar!</p>
+        <div id="header">
+            <h1>Santa Fe Dance Calendar</h1>
+            <p>A list of dance classes and social dances that I know about. Always click the link to make sure it's actually happening / get more info. <br />Email joseph.carrington@gmail.com to have your events added to the calendar!</p>
+        </div>
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&showPrint=0&showTitle=0&showTabs=0&showCalendars=0&showTz=0&mode=WEEK&src=OTc4OWEzMTczNTNiMDdlZDcwYzQwOGYzZDQyNzFlZjliYzc1MmNhMWQ2ZTcyNjMzODZlOTVmM2IxMDk1NzYxNUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t"></iframe>
     </body>
 </html>
