--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
             <h1>Santa Fe Dance Calendar</h1>
             <p>A list of dance classes and social dances that I know about. Always click the link to make sure it's actually happening / get more info. <br />Email joseph.carrington@gmail.com to have your events added to the calendar!</p>
         </div>
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&showPrint=0&showTz=0&showCalendars=0&showTabs=0&showTitle=0&mode=WEEK&src=OTc4OWEzMTczNTNiMDdlZDcwYzQwOGYzZDQyNzFlZjliYzc1MmNhMWQ2ZTcyNjMzODZlOTVmM2IxMDk1NzYxNUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=amlmNTJlMmFwbDA0b2t2ZDRmZGhxYjBzbm9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&showPrint=0&mode=WEEK&showTz=0&showCalendars=0&showTabs=0&showTitle=0&src=OTc4OWEzMTczNTNiMDdlZDcwYzQwOGYzZDQyNzFlZjliYzc1MmNhMWQ2ZTcyNjMzODZlOTVmM2IxMDk1NzYxNUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t"></iframe>
     </body>
 </html>
